Agregue imagenes y modifique parte entrada

--- a/entrada.html
+++ b/entrada.html
@@ -22,10 +22,51 @@
     
     <main>
         <div class="parent">
-            <div class="div1">1</div>
-            <div class="div2">2</div>
-            <div class="div3">3</div>
-            <div class="div4">4</div>
+            <div class="div1">
+                <h3>Pocion de papas 🍟</h3>
+                <div class="pp">
+                    <img src="img/pdp.jpeg" alt="porcion de papas">
+                </div>
+            </div>
+            <div class="div2">
+                <h3>Papas con cheddar 🍟🧀</h3>
+                <div class="papascc">
+                    <img src="img/cheddar.jpeg" alt="pp con cheddar">
+                </div>
+            </div>
+            <div class="div3">
+                <h3>Picada 🍲</h3>
+                <div class="Picada">
+                    <img src="img/picada.jpeg" alt="picada">
+                </div>
+            </div>
+            <div class="div4">
+               <h3>Empanadas 🥟</h3>     
+                    <div class="empanada">
+                        <span>🔴 CARNE </span>
+                        <img src="img/empanada-de-carne.jpg" alt="Empanada de carne">
+                    </div>
+                    <div class="empanada">
+                        <span>🔴 POLLO </span>
+                        <img src="img/empanada-de-pollo.jpeg" alt="Empanada de POLLO">
+                    </div>
+                    <div class="empanada">
+                        <span>🔴 JAMON Y QUESO </span>
+                        <img src="img/empanada-de-jyq.jpg" alt="Empanada de JAMON y QUESO">
+                    </div>
+                    <div class="empanada">
+                        <span>🔴 VERDURA </span>
+                        <img src="img/empanada-de-verdura.jpeg" alt="Empanada de VERDURA">
+                    </div>
+                    <div class="empanada">
+                        <span>🔴 CEBOLLA Y QUESO </span>
+                        <img src="img/empanada-de-cyq.jpg" alt="Empanada de CEBOLLA y QUESO">
+                    </div>
+                    <div class="empanada">
+                        <span>🔴 QUESO Y CHOCLO </span>
+                        <img src="img/empanda-de-qc.jpeg" alt="Empanada de QUESO y CHOCLO">
+                    </div>
+            </div>
         </div>
     </main>
     
