Finalize el proyecto.

--- a/entrada.html
+++ b/entrada.html
@@ -62,16 +62,15 @@
             <div class="div4">
                 <div class="pp">
                     <img src="img/empanada-de-carne.jpg" alt="empanada" class="img_plato">
-                    
                     <div class="info_plato">
                         <h3>Empanadas🥟</h3>  
                         <ul>
-                            <li><span>🔴 CARNE</span></li>
-                            <li><span>🔴 POLLO </span></li>
-                            <li><span>🔴 JAMON Y QUESO </span></li>
-                            <li><span>🔴 VERDURA </span></li>
-                            <li><span>🔴 CEBOLLA Y QUESO </span> </li>
-                            <li><span>🔴 QUESO Y CHOCLO </span></li>
+                            <li><span>🔴 CARNE: Clásica y jugosa, rellena con carne picada sazonada y bien condimentada.</span></li>
+                            <li><span>🔴 POLLO: Pollo tierno desmenuzado con un toque de especias. </span></li>
+                            <li><span>🔴 JAMON Y QUESO: Cremosa fusión de queso derretido y jamón cocido. </span></li>
+                            <li><span>🔴 VERDURA: Espinaca y acelga salteadas, frescas y sabrosas. </span></li>
+                            <li><span>🔴 CEBOLLA Y QUESO: Dulzor de cebolla caramelizada con queso fundido. </span> </li>
+                            <li><span>🔴 QUESO Y CHOCLO: Mezcla cremosa de choclo y queso suave. </span></li>
                         </ul>  
                         
                         <p class="precio"><b>Precio: $900 c/u</b></p>
